--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,15 +3,38 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  background-color: rgba(240, 95, 50, 0.95);
+  //animation: App-logo-spin infinite 20s linear;
+  height: 200px;
+  width:200px;
+  border: 1px solid #d17046;
+  border-radius: 100%;
+  margin: 15px auto;
+
+}
+
+.App-logo img {
+  height: 220px;
+  margin:auto;
+  filter:drop-shadow(8px 8px 10px black) ;
+
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  //background-color: #06375f;
+  //height: 250px;
+  padding: 15px 0;
+  background-image: url("bar2.jpg");
+  background-size: cover;
   color: white;
+  text-shadow:1px 1px 2px black;
+}
+
+.App-header h1{
+  font-size: 3rem;
+  background-color: rgba(0, 5, 0, 0.25);
+  margin:20px 20px;
+  display: inline;
 }
 
 .App-intro {
