--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,15 +1,14 @@
 body,html{
-  background-color: #3C1D0F;
+  background-color: #f5f0f0 /*#3C1D0F;*/
 }
 
 .App {
   text-align: center;
-  background-color: #3C1D0F;
+  background-color: #f5f0f0  /*#3C1D0F;*/
 }
 
 .App-logo {
   background-color: rgba(240, 95, 50, 0.95);
-  //animation: App-logo-spin infinite 20s linear;
   height: 200px;
   width:200px;
   border: 1px solid #d17046;
@@ -22,13 +21,10 @@ body,html{
   height: 220px;
   margin:auto;
   filter:drop-shadow(8px 8px 10px black) ;
-
 }
 
 .App-header {
-  //background-color: #06375f;
-  //height: 250px;
-  padding: 15px 0;
+  padding: 0 0 15px 0;
   background-image: url("bar2.jpg");
   background-size: cover;
   color: white;
@@ -42,17 +38,10 @@ body,html{
 }
 
 .App-header h1{
-  font-size: 3rem;
+  font-size: 4rem;
+  font-weight: bold;
+  padding:1rem;
   background-color: rgba(0, 5, 0, 0.25);
-  margin:20px 20px;
-  display: inline;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  margin:1rem 0;
+  //display: inline;
 }
