--- a/client/src/components/signin.css
+++ b/client/src/components/signin.css
@@ -3,13 +3,25 @@
    position: absolute;
    padding:1rem;
    font-size: 1.25rem;
-   border:1px solid black;
    /*width: 200px; TODO:  */
   /* height:200px;TODO:  */
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: left;
-   border: 2px solid #2E3409;
+   border: 5px solid #2E3409;
+   border-radius: 3px;
 
+}
+
+.signin-panel .social-logins{
+  text-align: center;
+}
+
+.social-logins h3{
+  margin: 5px;
+}
+
+hr{
+  margin-bottom: 5px;
 }
