--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,7 +25,7 @@ body,html{
 
 .App-header {
   padding: 0 0 15px 0;
-  background-image: url("bar2.jpg");
+  background-image: url('./assets/bar2.jpg');
   background-size: cover;
   color: white;
   text-shadow:1px 1px 2px black;
